@@ -6,7 +6,7 @@ const MAX_NOTIFICATION = 100;
 export class NotificationManager {
   notifications = new Array<MyNotification>();
 
-  addNotification(noti: MyNotification) {
+  addNotification(noti: MyNotification, opt = 0) {
     this.notifications.unshift(noti);
     if (this.notifications.length > MAX_NOTIFICATION) this.notifications.pop();
 
@@ -21,6 +21,10 @@ export class NotificationManager {
       !OptionsService.instance.battleLostNotification
     ) {
       return;
+    }
+    if (noti.type === NotificationTypes.WARP) {
+      if (OptionsService.instance.disableAllWarpNoti) return;
+      if (opt < 1 && OptionsService.instance.disableSmallWarpNoti) return;
     }
 
     MainService?.instance?.notificationEmitter?.emit(noti);
